--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 .reference {
   position: absolute;
   left: 0;
@@ -6,7 +8,7 @@
   top: 0;
   width: 100%;
   height: 3988px;
-  z-index: 10;
+  z-index: -10;
 
   div {
     margin: 0 auto;
@@ -50,4 +52,68 @@
   --fs-lg: 18px;
   --fs-md: 16px;
   --fs-sm: 14px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  font-size: var(--fs-md);
+  line-height: 1.5;
+  color: var(--text-dark-gray);
+  background-color: var(--body-bg-color);
+  text-size-adjust: 100%;
+}
+
+a {
+  color: var(--main-color);
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+.container {
+  border: solid 1px red;
+  max-width: 1170px;
+  margin: auto;
+  padding: 0 15px;
+}
+
+.page-wrapper {
+  overflow: hidden;
+}
+
+.header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  padding: 10px 0;
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav {
+    li {
+      display: inline-block;
+      margin-left: 35px;
+    }
+  }
 }
