--- a/style.scss
+++ b/style.scss
@@ -190,3 +190,95 @@ ul {
     display: none;
   }
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 30px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: var(--text-x-dark-gray);
+  line-height: 1.3;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 28px;
+  background-color: var(--main-color);
+  color: var(--text-white);
+  font-weight: 500;
+  font-size: var(--fs-md);
+  text-transform: capitalize;
+  line-height: 1.5;
+  font-family: inherit;
+  border: 2px solid transparent;
+  border-radius: 30px;
+  vertical-align: middle;
+  user-select: none;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: transparent;
+    color: var(--main-color);
+    border-color: var(--main-color);
+  }
+}
+
+.home {
+  padding: 100px 0 60px;
+
+  &-text,
+  &-image {
+    grid-column: span 6;
+    align-self: center;
+  }
+
+  &-text {
+    h1 {
+      font-size: var(--fs-4xl);
+      margin: 0 0 20px;
+      text-transform: capitalize;
+    }
+
+    p {
+      margin: 0 0 30px;
+    }
+  }
+
+  &-image {
+    position: relative;
+    max-width: 270px;
+    display: block;
+    margin: auto;
+
+    .circle-wrapper {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      z-index: -1;
+
+      .circle {
+        height: 350px;
+        width: 350px;
+        background-color: var(--main-color);
+        border-radius: 500%;
+
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+}
