--- a/style.scss
+++ b/style.scss
@@ -394,3 +394,40 @@ img {
     }
   }
 }
+
+.services {
+  &-item {
+    grid-column: span 3;
+    text-align: center;
+
+    &:hover {
+      .image-box {
+        img {
+          transform: scale(1.5);
+        }
+      }
+    }
+
+    .image-box {
+      height: 140px;
+      width: 140px;
+      border-radius: 50%;
+      margin: 0 auto 20px;
+      box-shadow: var(--shadow);
+      background-color: var(--bg-color);
+      padding: 8px;
+      overflow: hidden;
+
+      img {
+        border-radius: 50%;
+        transition: transform 0.5s ease;
+      }
+    }
+
+    h3 {
+      text-transform: capitalize;
+      font-size: var(--fs-xl);
+      font-weight: 500;
+    }
+  }
+}
