--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+@import 'node_modules/@fontsource/poppins/300.css';
+@import 'node_modules/@fontsource/poppins/400.css';
+@import 'node_modules/@fontsource/poppins/500.css';
+@import 'node_modules/@fontsource/poppins/600.css';
+
+@import 'node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
 
 .reference {
   position: absolute;
