--- a/style.scss
+++ b/style.scss
@@ -5,8 +5,6 @@
 @import 'node_modules/@fontsource/poppins/500.css';
 @import 'node_modules/@fontsource/poppins/600.css';
 
-@import 'node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
-
 .reference {
   position: absolute;
   left: 0;
@@ -435,6 +433,140 @@ img {
       text-transform: capitalize;
       font-size: var(--fs-xl);
       font-weight: 500;
+    }
+  }
+}
+
+.style-switcher {
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 10;
+  width: 280px;
+  height: 100%;
+  transform: translateX(100%);
+  transition: all 0.3s ease;
+
+  &.open {
+    box-shadow: var(--shadow);
+    transform: translateX(0);
+  }
+
+  &-main {
+    height: 100%;
+    background-color: var(--bg-color);
+    padding: 30px;
+    overflow-y: auto;
+  }
+
+  &-toggler {
+    height: 40px;
+    width: 40px;
+    background-color: var(--main-color);
+    color: var(--text-white);
+    font-size: var(--fs-md);
+    position: absolute;
+    left: -40px;
+    top: 28%;
+    border-radius: 8px 0 0 8px;
+    border: none;
+  }
+
+  h2 {
+    text-transform: capitalize;
+    font-size: var(--fs-xl);
+    font-weight: 500;
+    padding: 0 0 10px;
+  }
+
+  &-item {
+    padding: 15px 0;
+    border-top: 1px solid var(--border-color);
+
+    p {
+      margin-bottom: 10px;
+    }
+
+    .hue-slider {
+      appearance: none;
+      width: 100%;
+      outline: none;
+      height: 12px;
+      border-radius: 6px;
+      margin-bottom: 5px;
+      cursor: pointer;
+      background: linear-gradient(
+        to right,
+        hsl(0, var(--saturation), var(--lightness)),
+        hsl(30, var(--saturation), var(--lightness)),
+        hsl(60, var(--saturation), var(--lightness)),
+        hsl(90, var(--saturation), var(--lightness)),
+        hsl(120, var(--saturation), var(--lightness)),
+        hsl(150, var(--saturation), var(--lightness)),
+        hsl(180, var(--saturation), var(--lightness)),
+        hsl(210, var(--saturation), var(--lightness)),
+        hsl(240, var(--saturation), var(--lightness)),
+        hsl(270, var(--saturation), var(--lightness)),
+        hsl(300, var(--saturation), var(--lightness)),
+        hsl(330, var(--saturation), var(--lightness)),
+        hsl(360, var(--saturation), var(--lightness))
+      );
+
+      &:focus {
+        box-shadow: var(--shadow);
+      }
+    }
+
+    .form-switch {
+      display: flex;
+      justify-content: space-between;
+      cursor: pointer;
+
+      span {
+        padding-right: 15px;
+      }
+
+      input {
+        position: absolute;
+        pointer-events: none;
+        opacity: 0;
+
+        &:checked + .box {
+          background-color: var(--main-color);
+          border-color: var(--main-color);
+        }
+
+        &:focus + .box {
+          box-shadow: var(--focus-shadow);
+        }
+
+        &:checked + .box::before {
+          transform: translateX(calc(100% + 6px));
+          background-color: var(--bg-white);
+          border-color: transparent;
+        }
+      }
+
+      .box {
+        height: 24px;
+        width: 44px;
+        border-radius: 12px;
+        border: 1px solid var(--border-color);
+        position: relative;
+        transition: all 0.5s ease;
+
+        &::before {
+          content: '';
+          height: 14px;
+          width: 14px;
+          border: 1px solid var(--border-color);
+          position: absolute;
+          left: 4px;
+          top: 4px;
+          border-radius: 50%;
+          transition: all 0.5s ease;
+        }
+      }
     }
   }
 }
