--- a/style.scss
+++ b/style.scss
@@ -59,6 +59,18 @@
   --fs-sm: 14px;
 }
 
+body.theme-dark {
+  --text-x-dark-gray: hsl(0, 0%, 94%);
+  --text-dark-gray: hsl(0, 0%, 84%);
+
+  --bg-color: hsl(var(--hue), 13%, 17%);
+  --body-bg-color: hsl(var(--hue), 20%, 10%);
+
+  --border-color: hsl(var(--hue), 15%, 30%);
+
+  --shadow: 0 0 10px hsla(var(--hue), 19%, 7%, 0.9);
+}
+
 html {
   scroll-behavior: smooth;
 }
