--- a/style.scss
+++ b/style.scss
@@ -449,6 +449,69 @@ img {
   }
 }
 
+.pricing {
+  &-item {
+    grid-column: span 4;
+    border-color: var(--bg-color);
+    box-shadow: var(--shadow);
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  &-header {
+    h3 {
+      text-transform: capitalize;
+      margin: 0 0 20px;
+      font-size: var(--fs-2xl);
+      font-weight: 600;
+    }
+
+    .price {
+      height: 140px;
+      width: 140px;
+      box-shadow: inset var(--shadow);
+      margin: auto;
+      border-radius: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: var(--fs-sm);
+      text-transform: capitalize;
+
+      span {
+        font-size: var(--fs-3xl);
+        color: var(--main-color);
+        font-weight: bold;
+        line-height: 1.3;
+      }
+    }
+  }
+
+  &-body {
+    padding: 30px 0;
+    text-align: left;
+
+    li {
+      text-transform: capitalize;
+      position: relative;
+      padding-left: 24px;
+
+      & + li {
+        margin-top: 10px;
+      }
+
+      i {
+        position: absolute;
+        left: 0;
+        top: 6px;
+        font-size: var(--fs-sm);
+      }
+    }
+  }
+}
+
 .style-switcher {
   position: fixed;
   right: 0;
