--- a/style.scss
+++ b/style.scss
@@ -512,6 +512,62 @@ img {
   }
 }
 
+.team {
+  &-item {
+    grid-column: span 4;
+
+    .image-box {
+      max-width: 350px;
+      box-shadow: var(--shadow);
+      background-color: var(--bg-color);
+      margin: auto;
+      border-radius: 50%;
+      padding: 15px;
+    }
+
+    img {
+      border-radius: 50%;
+      transition: filter 0.5s ease;
+    }
+
+    &:hover {
+      img {
+        filter: grayscale(50%);
+      }
+
+      .detail {
+        border-radius: 40px 0;
+      }
+    }
+
+    .detail {
+      background-color: var(--main-color);
+      width: 85%;
+      max-width: 260px;
+      padding: 15px;
+      margin: -42px auto 0;
+      text-align: center;
+      text-transform: capitalize;
+      position: relative;
+      z-index: 1;
+      border-radius: 0 40px;
+      transition: border-radius 0.5s ease;
+    }
+
+    h3 {
+      margin: 0 0 5px;
+      color: var(--text-white);
+      font-size: var(--fs-xl);
+      font-weight: 500;
+    }
+
+    p {
+      margin: 0;
+      color: var(--text-light-gray);
+    }
+  }
+}
+
 .style-switcher {
   position: fixed;
   right: 0;
