--- a/style.scss
+++ b/style.scss
@@ -232,6 +232,10 @@ img {
   vertical-align: middle;
 }
 
+button {
+  cursor: pointer;
+}
+
 .button {
   display: inline-block;
   padding: 10px 28px;
@@ -564,6 +568,90 @@ img {
     p {
       margin: 0;
       color: var(--text-light-gray);
+    }
+  }
+}
+
+.contact {
+  &-grid {
+    max-width: 1000px;
+    margin: auto;
+  }
+
+  &-info {
+    grid-column: span 5;
+
+    &-item {
+      position: relative;
+      padding: 20px 0 20px 70px;
+
+      & + & {
+        margin-top: 20px;
+        border-top: 1px solid var(--border-color);
+      }
+
+      h3 {
+        margin: 0 0 10px;
+        font-size: var(--fs-xl);
+        font-weight: 500;
+        text-transform: capitalize;
+      }
+
+      p {
+        margin: 0;
+      }
+
+      i {
+        height: 50px;
+        width: 50px;
+        border-color: var(--bg-color);
+        box-shadow: var(--shadow);
+        color: var(--main-color);
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        left: 0;
+        top: 20px;
+      }
+    }
+  }
+
+  &-form {
+    grid-column: span 7;
+
+    .input-box {
+      margin-bottom: 20px;
+    }
+
+    textarea.input-control {
+      display: block;
+      height: 150px;
+      padding-top: 15px;
+      resize: none;
+    }
+
+    .input-control {
+      width: 100%;
+      height: 50px;
+      border-radius: 25px;
+      border: 1px solid var(--border-color);
+      background-color: transparent;
+      font-family: inherit;
+      font-weight: inherit;
+      font-size: inherit;
+      color: var(--text-x-dark-gray);
+      padding: 0 20px;
+
+      ::placeholder {
+        color: var(--text-x-dark-gray);
+        opacity: 1;
+      }
+
+      &:focus {
+        outline: 1px solid var(--border-color);
+      }
     }
   }
 }
