--- a/style.scss
+++ b/style.scss
@@ -354,15 +354,12 @@ button {
   &-image,
   &-text {
     grid-column: span 6;
+    align-self: center;
   }
 
   .section-title {
     text-align: left;
     margin: 0 0 15px;
-  }
-
-  &-text {
-    align-self: center;
   }
 
   &-image {
@@ -651,6 +648,41 @@ button {
 
       &:focus {
         outline: 1px solid var(--border-color);
+      }
+    }
+  }
+}
+
+.footer {
+  padding: 50px 0;
+  background-color: var(--main-color);
+  text-align: center;
+
+  h3 {
+    color: var(--text-white);
+    font-size: var(--fs-2xl);
+    margin: 0 0 15px;
+    font-weight: 500;
+    text-transform: capitalize;
+  }
+
+  .social-links {
+    a {
+      height: 40px;
+      width: 40px;
+      display: inline-flex;
+      background-color: var(--bg-white);
+      border-radius: 50%;
+      align-items: center;
+      justify-content: center;
+      margin: 0 4px;
+      border: 1px solid transparent;
+      transition: all 0.5s ease;
+
+      &:hover {
+        background-color: transparent;
+        color: var(--text-white);
+        border-color: initial;
       }
     }
   }
