--- a/style.scss
+++ b/style.scss
@@ -819,3 +819,75 @@ button {
     }
   }
 }
+
+@media screen and (max-width: 1199px) {
+  .about {
+    &-image {
+      .image-box {
+        .box-1 {
+          top: 100%;
+          left: 50%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 991px) {
+  :root {
+    --fs-4xl: 42px;
+    --fs-3xl: 31px;
+    --fs-2xl: 24px;
+  }
+
+  .home {
+    &-image {
+      img {
+        max-width: 250px;
+      }
+
+      .circle-wrapper {
+        .circle {
+          height: 290px;
+          width: 290px;
+        }
+      }
+    }
+  }
+
+  .services {
+    &-item {
+      // grid-column: span 6;
+
+      .image-box {
+        height: 120px;
+        width: 120px;
+      }
+    }
+  }
+
+  .pricing {
+    .grid {
+      margin: 0 30px;
+      gap: 60px;
+    }
+
+    &-item {
+      grid-column: span 6;
+      padding: 30px 60px;
+    }
+
+    &-header {
+      .price {
+        height: 130px;
+        width: 130px;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+}
+
+@media (max-width: 575px) {
+}
