--- a/style.scss
+++ b/style.scss
@@ -857,11 +857,11 @@ button {
 
   .services {
     &-item {
-      // grid-column: span 6;
+      grid-column: span 6;
 
       .image-box {
-        height: 120px;
-        width: 120px;
+        height: 180px;
+        width: 180px;
       }
     }
   }
@@ -884,9 +884,107 @@ button {
       }
     }
   }
+
+  .team {
+    &-item {
+      grid-column: span 6;
+    }
+  }
 }
 
 @media (max-width: 767px) {
+  :root {
+    --fs-4xl: 35px;
+    --fs-3xl: 36px;
+    --fs-2xl: 22px;
+    --fs-xl: 18px;
+  }
+
+  .header {
+    .nav-toggler {
+      display: block;
+      height: 34px;
+      width: 40px;
+      border: none;
+      z-index: 1;
+      background-color: transparent;
+
+      &.active {
+        span {
+          background-color: transparent;
+
+          &::before {
+            transform: rotate(45deg);
+          }
+
+          &::after {
+            transform: rotate(-45deg);
+          }
+        }
+      }
+
+      span {
+        position: relative;
+        display: block;
+        height: 2px;
+        width: 24px;
+        background-color: var(--main-color);
+        margin: auto;
+        transition: background-color 0.3s ease;
+
+        &::before,
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-color: var(--main-color);
+          transition: transform 0.3s ease;
+        }
+
+        &::before {
+          transform: translateY(-7px);
+        }
+
+        &::after {
+          transform: translateY(7px);
+        }
+      }
+    }
+
+    .nav {
+      position: fixed;
+      right: 0;
+      top: 0;
+      height: 100vh;
+      width: 200px;
+      background-color: var(--bg-color);
+      padding: 60px 30px 30px;
+      overflow-y: auto;
+      transform: translateX(100%);
+      transition: all 0.3s ease;
+
+      &.open {
+        transform: translateX(0);
+        box-shadow: var(--shadow);
+      }
+
+      li {
+        display: block;
+        margin: 0;
+
+        & + li {
+          border-top: 1px solid var(--border-color);
+        }
+      }
+
+      a {
+        font-size: var(--fs-lg);
+      }
+    }
+  }
 }
 
 @media (max-width: 575px) {
