--- a/style.scss
+++ b/style.scss
@@ -985,6 +985,69 @@ button {
       }
     }
   }
+
+  .home {
+    &-image,
+    &-text {
+      grid-column: span 12;
+    }
+
+    &-image {
+      order: -1;
+      margin-bottom: 20px;
+    }
+  }
+
+  .about {
+    &-image,
+    &-text {
+      grid-column: span 12;
+    }
+
+    .section-title {
+      text-align: center;
+    }
+
+    &-text {
+      order: -1;
+      margin-bottom: 20px;
+    }
+
+    &-image {
+      .image-box {
+        .box {
+          width: 115px;
+          height: 115px;
+        }
+      }
+    }
+  }
+
+  .services {
+    &-item {
+      grid-column: span 6;
+    }
+  }
+
+  .pricing {
+    &-header {
+      .price {
+        height: 120px;
+        width: 120px;
+      }
+    }
+  }
+
+  .contact {
+    &-info,
+    &-form {
+      grid-column: span 12;
+    }
+
+    &-info {
+      margin-bottom: 30px;
+    }
+  }
 }
 
 @media (max-width: 575px) {
